--- a/practica2.Rmd
+++ b/practica2.Rmd
@@ -174,6 +174,30 @@ summary(football_matches)
 
 ## Selecció dels grups de dades que es volen analitzar/comparar (p. e., si es volen comparar grups de dades, quins són aquests grups i quins tipus d’anàlisi s’aplicaran?)
 
+```{r}
+total_referee_yellow_cards <- aggregate(HY+AY ~ Referee, football_matches, sum)
+total_referee_red_cards <- aggregate(HR+AR ~ Referee, football_matches, sum)
+mean_referee_yellow_cards <- aggregate(HY+AY ~ Referee, football_matches, mean)
+mean_referee_red_cards <- aggregate(HR+AR ~ Referee, football_matches, mean)
+
+count_referee <- count(football_matches, Referee)
+count_referee <- head(count_referee, - 1)
+
+referee <- mean_referee_yellow_cards
+referee[3] <- mean_referee_red_cards[2]
+referee[4] <- total_referee_yellow_cards[2]
+referee[5] <- total_referee_red_cards[2]
+referee[6] <- count_referee[2]
+
+names(referee)[names(referee) == 'Referee'] <- 'name'
+names(referee)[names(referee) == 'HY + AY'] <- 'avg_Y'
+names(referee)[names(referee) == 'HR + AR'] <- 'avg_R'
+names(referee)[names(referee) == 'HY + AY.1'] <- 'total_Y'
+names(referee)[names(referee) == 'HR + AR.1'] <- 'total_R'
+names(referee)[names(referee) == 'n'] <- 'total_games'
+
+```
+
 
 ## Comprovació de la normalitat i homogeneïtat de la variància
 
